# ds_learn

./: .gitattributes  Curve_Fitting.ipynb  README.md  Radar Chart.ipynb  anomaly_detect.py  base_sklearn.ipynb  ds.ipynb  example.parquet  hello.py  jieba.ipynb  pyproject.toml  seaborn.ipynb
Users/xytcs/Desktop/uv python/ds_learn/practice/: practice.ipynb
learn/: Python实战训练营-实例（第5-6次课）.rar  pyarrow_learn.py  作业2要求及资源数据.rar
learn/1/: 1-1.py  1-2.py  1-3.py  1-4.py  1-5.py  1-6.py  1-7.py  1-8.py  1-9.py
learn/1.2 作业1要求及资源数据/: orders.csv  作业.py  作业1.docx
learn/2/: 2-1.py  2-2.py  2-4.py  2-5.py
learn/3/: 3-1.py  3-19-1.py  3-19-2.py  3-19-3.py  3-19.py  3-2.py  3-20.py  3-21.py  3-22.py  3-23.py  3-24.py  3-25.py  3-26.py  3-27.py  3-28.py  3-3.py  3-4.py  3-5.py  3-6.py  3-7.py  3-8.py  3-9.py  nuclear_dict.txt
learn/3/data/: 2.xlsx  age.csv  clothes.csv  flight.csv  gaokao.csv  guangzhou.csv  house.xlsx  penguin.csv  product.csv  sale.csv  staff.csv  steps.csv  stock.csv  tip.csv
learn/4/: 4-1.py  4-3.py  4-4.py  核燃料生产周报告_2025-07-26.docx
learn/5/: 5-1.py  5-2.py  5-3.py  5-4.py  Source.gv
learn/6/: 6-1.py  6-2.py  6-3.py  6-4.py  6-5.py  6-6.py  player-2023春季赛.csv  stopwords.txt  清洗后的资产设备表.xlsx  资产设备表.xls
learn/作业2要求及资源数据/: comments.csv  作业2.docx
practice/: practice.ipynb
practice/csv/: flight_data.csv  sales_data.csv
practice/docx/: Project_Report_Template.docx
practice/text/: nuclear_dict.txt
source/jieba/: custom_dict.txt
