[project]
name = "ds-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jieba>=0.42.1",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.3.0",
    "pyarrow>=19.0.1",
    "python-docx>=1.2.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "wordcloud>=1.9.4",
    "xlrd>=2.0.2",
]
